# procedural-planets

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  record
src/: config.hpp  debuggl.cpp  debuggl.h  icosphere.h  icosphere.hpp  main.cpp  perlin.cpp  perlin.h  perlin.hpp  planet.cpp  planet.hpp  render.cpp  render.h  render.hpp
src/shaders/: passthrough.frag  passthrough.vert
